deploy/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: cost-metrics
  labels:
    app: cost-metrics-aggregator
