deploy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cost-metrics-aggregator
  namespace: cost-metrics
  labels:
    app: cost-metrics-aggregator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cost-metrics-aggregator
  template:
    metadata:
      labels:
        app: cost-metrics-aggregator
    spec:
      containers:
      - name: cost-metrics-aggregator
        image: quay.io/chambrid/cost-metrics-aggregator:latest
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "200m"
            memory: "256Mi"
