deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: cost-metrics-aggregator
  namespace: cost-metrics
spec:
  selector:
    app: cost-metrics-aggregator
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
